--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_screenutil: ^5.8.4
   google_fonts:
   logger:
+  firebase_auth:
+  firebase_core:
+  google_sign_in: 
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/png/
+    - assets/jpg/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
